--- a/vignettes/NetRep.html
+++ b/vignettes/NetRep.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2016-02-23" />
 
-<title>Using the NetRep package</title>
+<title>NetRep</title>
 
 
 
@@ -70,7 +70,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
 
 <div id="header">
-<h1 class="title">Using the NetRep package</h1>
+<h1 class="title">NetRep</h1>
 <h4 class="author"><em>Scott Ritchie</em></h4>
 <h4 class="date"><em>2016-02-23</em></h4>
 </div>
